# KFileSync

./: .clinerules  .gitignore  AUDIT_SUMMARY.md  KFILESYNC_STATE.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: error.rs  http_sync_flow.rs  identity_service.rs  indexer_service.rs  mod.rs  share_service.rs  sync_flow.rs  transfer_service.rs
src-tauri/src/domain/: error.rs  mod.rs
src-tauri/src/domain/event/: identity.rs  sharing.rs  sync_events.rs  transfer.rs
src-tauri/src/domain/model/: device.rs  file_entry.rs  pairing.rs  share.rs  transfer.rs
src-tauri/src/domain/port/: audit_repo.rs  discovery.rs  event_bus.rs  file_index_repo.rs  file_watcher.rs  key_store.rs  network.rs  repository.rs  share_repo.rs  transfer_repo.rs
src-tauri/src/domain/service/: block_deduplicator.rs  chunking.rs  conflict_resolver.rs  policy_enforcer.rs  specification.rs  sync_plan_generator.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/events/: audit_handler.rs  cleanup_handler.rs  in_process_bus.rs  mod.rs  security_handler.rs
src-tauri/src/infrastructure/network/: dto.rs  http_client.rs  http_server.rs  mod.rs
src-tauri/src/infrastructure/persistence/: mod.rs  sqlite_audit_repo.rs  sqlite_device_repo.rs  sqlite_file_index_repo.rs  sqlite_share_repo.rs  (+1 more)
src-tauri/src/interfaces/: mod.rs  tauri_cmds.rs
src-tauri/tests/: unit.rs
src-tauri/tests/unit/: chunk_hasher_test.rs  chunking_strategy_test.rs  conflict_resolver_test.rs  device_state_test.rs  domain_model_test.rs  event_bus_test.rs  fingerprint_test.rs  nonce_validator_test.rs  specification_test.rs  sync_plan_generator_test.rs  transfer_state_test.rs  version_vector_test.rs
(+37 files in other folders)
