[package]
name = "kfilesync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-utils = []

[dev-dependencies]
kfilesync = { path = ".", features = ["test-utils"] }

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kfilesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
mdns-sd = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
rustls = "0.23"
rcgen = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }
ignore = "0.4.25"
notify = "8.2.0"
chrono = "0.4.44"
axum = "0.8.9"
reqwest = { version = "0.13.3", features = ["json", "query"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tokio-util = { version = "0.7.18", features = ["io"] }
bytes = "1.11.1"
futures = "0.3.32"
thiserror = "2.0.18" 
keyring = "2.3.3"
dirs = "6.0.0"
gethostname = "1.1.0"
base64 = "0.22.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
